[package]
name = "midly"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["smf", "playback", "midir-io"]
smf = ["midly_smf"]
playback = ["smf", "crossbeam-channel", "spin_sleep"]
midir-io = ["midir"]

[dependencies]
midly_core = { path = "../midly_core" }
midly_smf = { path = "../midly_smf", optional = true }
midir = { version = "0.7", optional = true }
spin_sleep = { version = "1", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
