[package]
name = "midly_rawstream"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = ["midly_core/alloc"]

[dependencies]
midly_core = { path="../midly_core", default-features=false }
